// 其它服务
// protoc -I ./ ./other.proto --go_out=plugins=grpc:./other/

syntax = "proto3";

service Other {

	//发送短信验证码
	rpc SendSms(sendRequest) returns (sendReply) {}

	//校验短信验证码
	rpc CheckCode(checkRequest) returns (checkReply) {}

}

message sendRequest {
	string mobile = 1;
}

message sendReply {
	string sended = 1;
}

message checkRequest {
	string mobile = 1;
	string code = 2;
}

message checkReply {
	string checked = 1;
}
